[package]
name = "rsdbgen"
version = "0.1.0"
authors = ["Brian Victor <github@brianhv.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "macros"
] }
codegen = "0.1.3"
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.32"
Inflector = "0.11.4"
itertools = "0.10.5"
